# ase-palette-generator

./: CMakeLists.txt  README.md  setup.sh
